Layout bug test 3.

--- a/events-test.css
+++ b/events-test.css
@@ -1,15 +1,10 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
-html {
+#test {
   border: 5px solid red;
-  min-height: -webkit-fill-available;
-}
-
-body {
-  border: 5px solid green;
-  min-height: 100vh;
-  /* mobile viewport bug fix */
-  min-height: -webkit-fill-available;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
